--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,7 +105,7 @@ html {
 
 .bg-joinus {
   background-image: url('/images/joinus/horn.svg'),
-    url('/images/joinus/paint.svg');
+    url('https://img.icons8.com/external-smashingstocks-flat-smashing-stocks/264/external-ad-campaign-online-marketing-and-advertising-smashingstocks-flat-smashing-stocks.png');
   background-repeat: no-repeat, no-repeat;
   background-position: 90% 100%, 2% 18%;
 }
